# Email-Triage-Env

./: .gitignore  Dockerfile  README.md  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py
server/: app.py  environment.py
tasks/: easy.py  hard.py  medium.py
