[project]
name = "email-triage-env"
version = "1.0.0"
description = "AI-driven email triage RL environment for the Meta PyTorch OpenEnv Hackathon"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pyyaml",
    "requests",
    "openenv-core>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
env_name = "email_triage_env"
server_module = "server.app:app"
port = 7860