[project]
name = "email-triage-env"
version = "1.0.0"
description = "AI-driven email triage RL environment for the Meta PyTorch OpenEnv Hackathon"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pyyaml",
    "requests",
    "openenv-core>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

# This defines the command 'server' which the validator is looking for
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.openenv]
env_name = "email_triage_env"
server_module = "server.app:app"
port = 7860